// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly when there is a value 1`] = `
<div
  className="sui-sorting"
>
  <StateManager
    className="sui-select"
    classNamePrefix="sui-select"
    defaultInputValue=""
    defaultMenuIsOpen={false}
    defaultValue={null}
    isSearchable={false}
    onChange={[Function]}
    options={
      Array [
        Object {
          "name": "Name ASC",
          "value": "name|||asc",
        },
        Object {
          "name": "Name DESC",
          "value": "name|||desc",
        },
      ]
    }
    styles={
      Object {
        "control": [Function],
        "dropdownIndicator": [Function],
        "indicatorSeparator": [Function],
        "option": [Function],
      }
    }
    value={
      Object {
        "name": "Name DESC",
        "value": "name|||desc",
      }
    }
  />
</div>
`;

exports[`renders correctly when there is not a value 1`] = `
<div
  className="sui-sorting"
>
  <StateManager
    className="sui-select"
    classNamePrefix="sui-select"
    defaultInputValue=""
    defaultMenuIsOpen={false}
    defaultValue={null}
    isSearchable={false}
    onChange={[Function]}
    options={
      Array [
        Object {
          "name": "Name ASC",
          "value": "name|||asc",
        },
        Object {
          "name": "Name DESC",
          "value": "name|||desc",
        },
      ]
    }
    styles={
      Object {
        "control": [Function],
        "dropdownIndicator": [Function],
        "indicatorSeparator": [Function],
        "option": [Function],
      }
    }
    value={null}
  />
</div>
`;
